--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                         </li>
                         
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Resources</a>
+                            <a class="menu__link" href="./resource.html">Resources</a>
                         </li>
                         
                         <li class="menu__item menu__item--in">
